# docker-project-template

./: .Dockerfile.swp  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-build.zsh  docker-run.zsh  pyproject-v0.toml  pyproject.toml  requirements.txt  tox.ini
.requirements/: generate-requirements.zsh  requirements-poetry.txt
.requirements/toml/: pyproject.toml
app/: main.py
docker/: docker-container.zsh
docker-build/: Dockerfile  docker-build.zsh  generate-requirements.zsh  miniconda-jupyter.Dockerfile  requirements-poetry.txt  requirements.txt
docker/app/: Dockerfile  docker-build.zsh
docker/ci-tests/: docker-run.zsh
docker/db/: docker-run.zsh
docker/docker-build/: miniconda-jupyter.Dockerfile  requirements.txt
docker/project/: Dockerfile
project-template/docker/: docker-container.zsh
src/: data_ingest.py  database.py  preprocessing.py
src/app/: README.md
src/database/: Makefile  pyproject.toml
src/database/database/: database.py
src/database/make/: db.zsh  docker-run.zsh
src/database/tests/: test_database.py
src/evaluate/: pyproject.toml
src/ingest/: pyproject.toml
src/ingest/ingest/: ingest.py
src/preprocess/: Makefile  pyproject.toml
src/preprocess/notebooks/: EDA.ipynb
src/preprocess/preprocess/: __init__.py  preprocess.py  preprocessor.py
src/preprocess/tests/: test_preprocess.py
src/preprocess/tests/files/: pp_fit.pkl
src/serve/: Makefile  README.md  pyproject.toml  tox.ini
src/serve/serve/: __main__.py
src/train/: Makefile  model.py  pyproject.toml
src/train/notebooks/: training.ipynb
src/train/train/: train.py
