[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["Julian Ferry <julianferry94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.1"
cryptography = "^2.8"
pymysql = "^0.9.3"
sqlalchemy = "^1.3.15"
sqlalchemy-utils = "^0.36.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
