[tool.poetry]
name = "ingest"
version = "0.1.0"
description = ""
authors = ["Julian Ferry <julianferry94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
database = {path = "../database"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
