[tool.poetry]
name = "train"
version = "0.1.0"
description = ""
authors = ["Julian Ferry <julianferry94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
database = {path = "../database"}
scikit-learn = "^0.23.2"
joblib = "^0.16.0"

jupyter = { version = "^1.0.0",  optional = true }
seaborn = { version = "^0.10.0", optional = true }

[tool.poetry.extras]
eda = ["jupyter", "seaborn"]

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
